<feat>: Store 모듈 리펙토링
Store 모듈 리펙토링을 진행했습니다.

- 인증 없이 호출할 수 없는 엔드포인트 피드백 수정
- 어노테이션 수정
- 주석 제거
- 트랜젝션 수정
- SuperBuilder 대신 Builder 사용