@@ -2,17 +2,13 @@ package kr.elroy.aigoya.store.controller;
 
 import kr.elroy.aigoya.store.api.EmployeeApi;
 import kr.elroy.aigoya.store.domain.Employee;
-import kr.elroy.aigoya.store.dto.request.EmployeeRequest;
+import kr.elroy.aigoya.store.dto.request.AddEmployeeRequest;
 import kr.elroy.aigoya.store.dto.response.EmployeeResponse;
 import kr.elroy.aigoya.store.service.EmployeeService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.RestController;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
-@RestController
 @RequiredArgsConstructor
 public class EmployeeController implements EmployeeApi {
 
@@ -20,28 +16,26 @@ public class EmployeeController implements EmployeeApi {
 
     @Override
     public EmployeeResponse addEmployee(
-            @AuthenticationPrincipal(expression = "id") Long storeId,
-            EmployeeRequest request
+            Long storeId,
+            AddEmployeeRequest request
     ) {
         Employee employee = employeeService.addEmployee(storeId, request);
-
         return EmployeeResponse.of(employee);
     }
 
     @Override
     public List<EmployeeResponse> getEmployees(
-            @AuthenticationPrincipal(expression = "id") Long storeId
+            Long storeId
     ) {
         List<Employee> employees = employeeService.getEmployees(storeId);
-
         return employees.stream()
                 .map(EmployeeResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void removeEmployee(
-            @AuthenticationPrincipal(expression = "id") Long storeId,
+            Long storeId,
             Long employeeId
     ) {
         employeeService.removeEmployee(storeId, employeeId);
